apps/homelab-web/envs/dev/middleware-oauth2.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-errors
  namespace: homelab-web
spec:
  errors:
    status:
      - "401"
    service:
      name: oauth2-proxy
      port: 4180
    query: /oauth2/sign_in?rd={url}
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-forward-auth
  namespace: homelab-web
spec:
  forwardAuth:
    address: http://oauth2-proxy.homelab-web.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
      - Authorization
