apps/homelab-web/envs/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelab-web
  namespace: homelab-web
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/wlodzimierrr/homelab-web:sha-6c3a1415ce410d55ef66c88770cc21abed709425
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 256Mi
