apps/homelab-web/envs/dev/patch-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-web-api
  namespace: homelab-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "100"
    traefik.ingress.kubernetes.io/router.middlewares: homelab-web-oauth2-errors@kubernetescrd,homelab-web-oauth2-forward-auth@kubernetescrd
spec:
  rules:
    - host: portal.dev.homelab.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: homelab-web
                port:
                  number: 80
