apps/homelab-web/envs/dev/networkpolicy-allow-egress-oauth2-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-oauth2-proxy-https
  namespace: homelab-web
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
